policies/components/other/disallow-service-external-ips/resources.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: goodservice01
  namespace: mas-dev-core
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: badservice01
  namespace: mas-dev-core
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  externalIPs:
    - 1.2.3.4
---
apiVersion: v1
kind: Service
metadata:
  name: badservice02
  namespace: mas-dev-core
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  externalIPs:
    - 1.2.3.4
    - 37.10.11.53
