policies/components/other/disallow-service-external-ips/disallow-service-external-ips.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mas-disallow-service-external-ips
  annotations:
    policies.kyverno.io/title: Restrict External IPs
    policies.kyverno.io/category: IBM - Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Service
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Service externalIPs can be used for a MITM attack (CVE-2020-8554).
      Restrict externalIPs or limit to a known set of addresses.
      See: https://github.com/kyverno/kyverno/issues/1367. This policy validates
      that the `externalIPs` field is not set on a Service.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-ips
      match:
        any:
          - resources:
              kinds:
                - Service
              namespaces:
                - "mas-*-core"
                - "mas-*-assist"
                - "mas-*-facilities"
                - "mas-*-iot"
                - "mas-*-manage"
                - "mas-*-monitor"
                - "mas-*-optimizer"
                - "mas-*-predict"
                - "mas-*-visualinspection"
                - "sls-*"
                - "ibm-sls"
                - "ibm-dro"
                - "redhat-marketplace"
                - "db2u"
      validate:
        message: "externalIPs are not allowed."
        pattern:
          spec:
            X(externalIPs): "null"
